Fix legend contrast, resolves #96

--- a/templates/components/forms/_base.scss
+++ b/templates/components/forms/_base.scss
@@ -107,7 +107,7 @@
   legend {
     @include rem(font-size, 24px);
     @include rem(padding, 30px 0);
-    color: $gray;
+    color: $midgray;
   }
 
   .invalid small {
